# FINTECH

./: .gitignore  README.md  ROADMAP.md  docker-compose.yml
backend/: .env  .env.example  Cargo.toml  Dockerfile
backend/migrations/: 20231010000000_init.sql  20231010000001_gamification.sql  20231010000002_example_items.sql  20231010000003_backend_completion.sql  20231010000004_rename_hero_to_finbro.sql
backend/src/: docs.rs  main.rs
backend/src/ai/: client.rs  mod.rs  routes.rs
backend/src/auth/: routes.rs
backend/src/consultations/: routes.rs
backend/src/examples/: routes.rs
backend/src/financial_profile/: routes.rs
backend/src/knowledge/: routes.rs
backend/src/learning/: routes.rs
backend/src/tts/: routes.rs
backend/src/users/: routes.rs
backend/src/voice/: routes.rs
docs/: RELEASE.md
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/public/: financial-quiz.html
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/auth/: page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/diagnosis/: page.tsx
frontend/src/app/games/: page.tsx
frontend/src/app/hero/: page.tsx
frontend/src/app/leaderboard/: page.tsx
frontend/src/components/: app-shell.tsx  auth-menu.tsx  avatar-card.tsx  avatar-viewer.tsx  avaturn-creator.tsx  bottom-nav.tsx  finbro-mascot.tsx  hero-avatar-3d.tsx  hero-avatar.tsx  hero-onboarding.tsx  level-mascots.tsx
frontend/src/hooks/: use-audio-recorder.ts
frontend/src/lib/: api.ts  default-levels.ts
frontend/src/state/: useAvatarStore.ts
(+7 files in other folders)
